spacing correction

--- a/src/index.css
+++ b/src/index.css
@@ -79,8 +79,8 @@ h3 {
     margin: 0;
 }
 
-.quote h4 {
-    margin-bottom: 2vh;
+.quote2 {
+    padding-bottom: 2vh;
 }
 
 .quote-container {
